--- a/index.html
+++ b/index.html
@@ -1,10 +1,50 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Charset -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="./public/Logo.png" type="image/x-icon" />
+
+    <!-- Viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+
+    <!-- Title -->
+    <title>Simply E-Mobiles | Electric Bikes, Tricycles & Cars in Nigeria</title>
+
+    <!-- SEO Meta Tags -->
+    <meta
+      name="description"
+      content="Simply E-Mobiles is a Nigerian electric mobility company providing affordable, reliable, and eco-friendly electric bikes, tricycles, cars, and fleet solutions with after-sales support."
+    />
+    <meta
+      name="keywords"
+      content="electric bikes Nigeria, electric tricycles Nigeria, EV cars Nigeria, sustainable transport, Simply E-Mobiles, eco-friendly mobility, fleet solutions"
+    />
+    <meta name="author" content="Simply E-Mobiles" />
+
+    <!-- Open Graph (Facebook & LinkedIn) -->
+    <meta property="og:title" content="Simply E-Mobiles | Electric Mobility in Nigeria" />
+    <meta
+      property="og:description"
+      content="Affordable electric bikes, tricycles, cars & fleet solutions for sustainable transport in Nigeria."
+    />
+    <meta property="og:image" content="./public/Logo.png" />
+    <meta property="og:url" content="https://www.simplyemobiles.com" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Simply E-Mobiles | Electric Bikes, Tricycles & Cars" />
+    <meta
+      name="twitter:description"
+      content="Explore our range of eco-friendly electric bikes, tricycles, cars & fleet solutions in Nigeria."
+    />
+    <meta name="twitter:image" content="./public/Logo.png" />
+
+    <!-- Robots -->
+    <meta name="robots" content="index, follow" />
   </head>
   <body>
     <div id="root" class="font-alan"></div>
