--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- Charset -->
@@ -11,8 +11,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Title -->
-    <title>Simply E-Mobiles | Electric Bikes, Tricycles & Cars in Nigeria</title>
-
+    <title>
+      Simply E-Mobiles | Electric Bikes, Tricycles & Cars in Nigeria
+    </title>
+    <meta
+      name="google-site-verification"
+      content="gexkokv2JfqUopwPQyUvmpIjJqgg-MRh5PaNoxZys2M"
+    />
     <!-- SEO Meta Tags -->
     <meta
       name="description"
@@ -25,7 +30,10 @@
     <meta name="author" content="Simply E-Mobiles" />
 
     <!-- Open Graph (Facebook & LinkedIn) -->
-    <meta property="og:title" content="Simply E-Mobiles | Electric Mobility in Nigeria" />
+    <meta
+      property="og:title"
+      content="Simply E-Mobiles | Electric Mobility in Nigeria"
+    />
     <meta
       property="og:description"
       content="Affordable electric bikes, tricycles, cars & fleet solutions for sustainable transport in Nigeria."
@@ -36,7 +44,10 @@
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Simply E-Mobiles | Electric Bikes, Tricycles & Cars" />
+    <meta
+      name="twitter:title"
+      content="Simply E-Mobiles | Electric Bikes, Tricycles & Cars"
+    />
     <meta
       name="twitter:description"
       content="Explore our range of eco-friendly electric bikes, tricycles, cars & fleet solutions in Nigeria."
