--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       name="google-site-verification"
       content="gexkokv2JfqUopwPQyUvmpIjJqgg-MRh5PaNoxZys2M"
     />
+    <meta name="google-site-verification" content="HmG4Yac2z1GsHhXPbeOLYrGTf6ntzj3LPeEgJMGTZgY" />
     <!-- SEO Meta Tags -->
     <meta
       name="description"
